feat(auth): configure security